syntax = "proto3";
package gopi;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Service to enumerate Googlecasts
service GoogleCast {
  // Simple ping method to show server is "up"
  rpc Ping (google.protobuf.Empty) returns (google.protobuf.Empty);

  // Returns list of cast devices
  rpc Devices (google.protobuf.Empty) returns (GoogleCastDeviceReply);

  // Stream events
  rpc StreamEvents (google.protobuf.Empty) returns (stream GoogleCastEvent); 
}

// A google cast device
message GoogleCastDevice {
    string id = 1;
    string name = 2;
    string model = 3;
    string service = 4;
    uint32 state = 5;
}

message GoogleCastDeviceReply {
    repeated GoogleCastDevice device = 1;
}

// Monitor changes
message GoogleCastEvent {
    // Event type
    enum EventType {
        EVENT_NONE = 0;
        EVENT_ADD = 1;
        EVENT_CHANGE = 2;
        EVENT_EXPIRE = 3;
    }
    // Fields
    EventType type = 1;
    GoogleCastDevice device = 2;
    google.protobuf.Timestamp ts = 3;
}
